--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -630,7 +630,7 @@
 % for over three affiliations, or if they all won't fit within the width
 % of the page, use this alternative format:
 % 
-\author{\IEEEauthorblockN{Thomas Bosch\IEEEauthorrefmark{1},
+\author{\IEEEauthorblockN{Thomas Hartmann (formerly Bosch)\IEEEauthorrefmark{1},
 Benjamin Zapilko\IEEEauthorrefmark{1},
 Joachim Wackerow\IEEEauthorrefmark{1}, 
 Kai Eckert\IEEEauthorrefmark{2}} %and
