--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -599,7 +599,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-%\title{Aspects of RDF Data Constraints in the Social, Behavioural, and Economic Sciences}
+%\title{Aspects of RDF Data Constraints in the Social, behavioral, and Economic Sciences}
 \title{Validating RDF Data Quality using Constraints to Direct the Development of Constraint Languages}
 
 % author names and affiliations
@@ -662,7 +662,7 @@ For research institutes, data libraries, and data archives,
 RDF data validation according to predefined constraints is a much sought-after feature, 
 particularly as this is taken for granted in the XML world.
 Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, we identified and published by today 81 types of constraints that are required by various stakeholders for data applications.
-In this paper, in collaboration with several domain experts we formulate 115 constraints on three different vocabularies (DDI-RDF, QB, and SKOS) and classify them according to (1) the severity of an occurring violation and (2) which types of constraint languages are able to express their type of constraint. We evaluate the data quality of 15,694 data sets (4.26 billion triples) of research data for the social, behavioural, and economic sciences obtained from 33 SPARQL endpoints.
+In this paper, in collaboration with several domain experts we formulate 115 constraints on three different vocabularies (DDI-RDF, QB, and SKOS) and classify them according to (1) the severity of an occurring violation and (2) which types of constraint languages are able to express their type of constraint. We evaluate the data quality of 15,694 data sets (4.26 billion triples) of research data for the social, behavioral, and economic sciences obtained from 33 SPARQL endpoints.
 Based on the results, we formulate several hypotheses to direct the further development of constraint languages.
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
@@ -705,19 +705,19 @@ For constraint formulation and RDF data validation, several languages exist or a
 In 2013, the W3C organized the RDF Validation Workshop,\footnote{\url{http://www.w3.org/2012/12/rdf-val/}} 
 where experts from industry, government, and academia discussed first use cases for constraint formulation and RDF data validation.
 In 2014, two working groups on RDF validation have been established to develop a language to express constraints on RDF data: 
-the \emph{W3C RDF Data Shapes Working Group}\footnote{\url{http://www.w3.org/2014/rds/charter}} (33 participants of 19 organizations) and the \emph{DCMI RDF Application Profiles Task Group}\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}} (29 people of 22 organizations) which among others bundles the requirements of data institutions of the cultural heritage sector and the \emph{social, behavioural, and economic (SBE)} sciences and represents them in the W3C group. 
+the \emph{W3C RDF Data Shapes Working Group}\footnote{\url{http://www.w3.org/2014/rds/charter}} (33 participants of 19 organizations) and the \emph{DCMI RDF Application Profiles Task Group}\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}} (29 people of 22 organizations) which among others bundles the requirements of data institutions of the cultural heritage sector and the \emph{social, behavioral, and economic (SBE)} sciences and represents them in the W3C group. 
 
 Within the DCMI task group, a collaboratively curated database of RDF validation requirements\footnote{Online available at: \url{http://purl.org/net/rdf-validation}} has been created which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions.
 The database connects requirements to use cases, case studies, and implementations and forms the basis of this paper. 
 We distinguish 81 requirements to formulate constraints on RDF data; 
 each of them corresponding to a constraint type.
 
-In this paper, we collected constraints for commonly used vocabularies in the SBE domain (see Section \ref{sbe-vocabularies}), either from the vocabularies themselves or from domain and data experts, in order to gain a better understanding about the role of certain requirements for data quality and to direct the further development of constraint languages. All in all, this lead to 115 constraints on three vocabularies
+In this paper, we collected constraints for commonly used vocabularies in the SBE domain (see Section \ref{sbe-vocabularies}), either from the vocabularies themselves or from domain and data experts, in order to gain a better understanding about the role of certain requirements for data quality and to direct the further development of constraint languages. All in all, this lead to 115 constraints on three vocabularies.
 We let the experts classify the constraints according to the severity of their violation. Furthermore, we classified each constraint type based on whether it is expressible by RDFS/OWL, common high-level constraint languages, or only by plain SPARQL (see Chapter \ref{classification}).
 
 As we do not want to base our conclusions on the evaluation of vocabularies and constraint definitions alone, we conducted a large-scale experiment.
 For all these 115 constraints, we evaluated the data quality of 15,694 data sets (4.26 billion triples) of SBE research data on three common vocabularies in SBE sciences (DDI-RDF, QB, SKOS) obtained from 33 SPARQL endpoints.
-%evaluated the data quality of 15,694 data sets (4.26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints.
+%evaluated the data quality of 15,694 data sets (4.26 billion triples) of research data for the social, behavioral, and economic (SBE) sciences obtained from 33 SPARQL endpoints.
 Based on the evaluation results,
 we formulate several findings to direct the further development of constraint languages.
 To make valid general statements for all vocabularies, however,
@@ -2291,7 +2291,7 @@ SPARQL seems to be used to formulate constraints whose violation is of higher se
 %We exhaustively evaluated the metadata quality of large real world aggregated (QB), unit-record (DDI-RDF), and thesauri (SKOS) data sets (more than 4.2 billion triples and 15 thousand data sets) by means of 213  constraints of the majority of the constraint types\footnote{The second appendix of this paper describing the evaluation in detail is available at: \url{http://arxiv.org/abs/1504.04478} \cite{BoschZapilkoWackerowEckert2015-2}.} (section \ref{evaluation}).
 
 We identified and published by today 81 types of constraints  that are required by various stakeholders for data applications.
-In close collaboration with several domain experts for the social, behavioural, and economic sciences (SBE), we formulated 115 constraints on three different vocabularies (DDI-RDF, QB, and SKOS) and classified them according to their severity level and  whether their type is expressible by different types of constraint languages - RDFS/OWL, high-level constraint languages, and SPARQL. 
+In close collaboration with several domain experts for the social, behavioral, and economic sciences (SBE), we formulated 115 constraints on three different vocabularies (DDI-RDF, QB, and SKOS) and classified them according to their severity level and  whether their type is expressible by different types of constraint languages - RDFS/OWL, high-level constraint languages, and SPARQL. 
 Using these constraints, we evaluated  the data quality of 15,694 data sets (4.26 billion triples) of research data for the SBE sciences obtained from 33 SPARQL endpoints.
 
 Based on the evaluation results, we formulated several findings to direct the further development of constraint languages. The general applicability of these findings, however, is still to be confirmed beyond the examined vocabularies and for other domains.
