--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -451,7 +451,7 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \newcommand{\ke}[1]{\todo[size=\small, color=red!40]{\textbf{Kai:} #1}}
 \newcommand{\tb}[1]{\todo[size=\small, color=green!40]{\textbf{Thomas:} #1}}
-\newcommand{\bz}[1]{\todo[size=\small, color=blue!40]{\textbf{Erman:} #1}}
+\newcommand{\bz}[1]{\todo[size=\small, color=blue!40]{\textbf{Ben:} #1}}
 
 \newenvironment{table-1cols}{
   \scriptsize
@@ -1001,7 +1001,7 @@ We further distinguish \emph{Constraint Language Based} as the set of constraint
 %RDFS, and OWL as we consider RDFS and OWL as constraint languages when assuming CWA/UNA semantics without reasoning. 
 There is a strong overlap between \emph{RDFS/OWL} and \emph{Constraint Language Based} constraint types as in many cases constraint types are expressible by both classical constraint languages and OWL. SPARQL, however, is considered as a low-level implementation language in this context. In contrast to SPARQL, high-level constraint languages are comparatively easy to understand and constraints can be formulated more concisely. Declarative languages may be placed on top of SPARQL when using it as an implementation language. For these \emph{Constraint Language Based} constraints, we expect a straight-forward support in future constraint languages.
 
-\emph{Context-specific exclusive or of property groups} (\emph{R-11}) is a constraint type which can be formulated by a high-level constraint language. Constraints of this type restrict individuals of given classes to have properties defined within exactly one of multiple mutually exclusive property groups. \emph{skos:Concept}s, e.g., can have either \emph{skos:definition} (when interpreted as theo\-reti\-cal concepts) or \emph{skos:notation} and \emph{skos:prefLabel} properties (when interpreted as codes), but not both:\ke{Wo kommt das constraint her? In SKOS gilt das nicht generell.}
+\emph{Context-specific exclusive or of property groups} (\emph{R-11}) is a constraint type which can be formulated by a high-level constraint language. Constraints of this type restrict individuals of given classes to have properties defined within exactly one of multiple mutually exclusive property groups. \emph{skos:Concept}s, e.g., can have either \emph{skos:definition} (when interpreted as theo\-reti\-cal concepts) or \emph{skos:notation} and \emph{skos:prefLabel} properties (when interpreted as codes), but not both:\ke{Wo kommt das constraint her? In SKOS gilt das nicht generell.}\bz{Wenn das Constraint keinen SKOS-Ursprung hat, sollten wir ein anderes Beispiel in dem Satz nennen.}
 %(\emph{error}).
 
 \begin{ex}[commandchars=\\\{\}]
@@ -2078,7 +2078,7 @@ almost all QB violations and 59\% of the SKOS violations are caused by \emph{war
 %Constraints are serious when they violate the integrity of vocabularies.
 %For well-established vocabularies, it is well documented and the experience is high how to guarantee this integrity
 %which is not the case or newly-developed vocabularies.
-\begin{hyp}\ke{das ist doch das gleiche wie 4, oder?}
+\begin{hyp}\ke{das ist doch das gleiche wie 4, oder?}\bz{Stimme Kai zu. Finding 4 und 6 koennte man zusammenfassen oder falls es doch Unterschiede gibt, muessen die staerker hervorgehoben werden.}
 For well-established vocabularies, data quality is high as serious violations rarely appear. For newly developed vocabularies, however, data quality is worse as serious violations occur partially.   
 \end{hyp} 
 
@@ -2301,7 +2301,7 @@ The main findings are:
 \begin{enumerate}
 \item
 \emph{Data quality can be significantly improved when suitable constraint languages are developed which enable to define 
-constraints, which up to now can only be expressed by plain SPARQL, in an easy, concise, and intuitive way. Thereby, the more elaborate a vocabulary is, the more sophisticated and complex constraints are specified using SPARQL.\ke{Nachsatz verstehe ich nicht...}}
+constraints, which up to now can only be expressed by plain SPARQL, in an easy, concise, and intuitive way. Thereby, the more elaborate a vocabulary is, the more sophisticated and complex constraints are specified using SPARQL.\ke{Nachsatz verstehe ich nicht...}\bz{Thomas, meinst du: the more elaborate a vocabulary is, the more sophisticated and complex constraints are necessary which can up to now only specified using SPARQL.}}
 \item
 \emph{The fact that only 1/5 of all violations result from RDFS/OWL Based constraints, even though 1/3 of all constraints are RDFS/OWL Based, indicates good data quality for all vocabularies with regard to their formal specifications.}  
 \item
